syntax = "proto3";

package user.service.v1;
option go_package = "kratos-ent-example/gen/api/go/user/service/v1;v1";

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";

import "common/pagination/pagination.proto";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 用户服务
service UserService {
  // 查询用户列表
  rpc ListUser (pagination.PagingRequest) returns (ListUserResponse) {}

  // 查询用户详情
  rpc GetUser (GetUserRequest) returns (User) {}

  // 创建用户
  rpc CreateUser (CreateUserRequest) returns (User) {}

  // 更新用户
  rpc UpdateUser (UpdateUserRequest) returns (User) {}

  // 删除用户
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}
}

// 用户
message User {
  uint32 id = 1;
  optional string userName = 2;
  optional string nickName = 3;
  optional string password = 4;

  optional string createTime = 10;
  optional string updateTime = 11;
  optional string deleteTime = 12;
}

// 获取用户列表 - 答复
message ListUserResponse {
  repeated User items = 1;
  int32 total = 2;
}

// 获取用户数据 - 请求
message GetUserRequest {
  uint32 id = 1;
}
message GetUserByUserNameRequest {
  string userName = 1;
}

// 创建用户 - 请求
message CreateUserRequest {
  User user = 1;
  uint32 operatorId = 2;
}

// 更新用户 - 请求
message UpdateUserRequest {
  uint32 id = 1;
  User user = 2;
  uint32 operatorId = 3;
}

// 删除用户 - 请求
message DeleteUserRequest {
  uint32 id = 1;
  uint32 operatorId = 2;
}
